--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.github.mheath</groupId>
 	<artifactId>etcd-client</artifactId>
 	<version>0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<name>etcd Client</name>
 	<description>Java support for etcd.</description>
